# sentinel

./: .gitignore  CLAUDE.md  PLAN.md  README.md  REVIEW_STATUS.md  action.yml  entrypoint.py  pyproject.toml  sentinel.yml
.github/workflows/: eval.yml  preview-deploy.yml  sentinel.yml  tests.yml
.sentinel/skills/: action_input_wiring.md  skill_hygiene.md
docs/: bake-off.md  evals.md  skill-design.md  state-of-sentinel.md  telemetry.md
docs/skills/: change-completeness.md
evals/: README.md
evals/fixtures/cross_repo/: context.json  diff.patch  expected.json
evals/fixtures/cross_repo/shipping-service/: handler.py
evals/fixtures/gha_privilege_escalation/: context.json  diff.patch  expected.json
evals/fixtures/terraform_variable_removed/: context.json  diff.patch  expected.json
evals/fixtures/unsafe_migration/: context.json  diff.patch  expected.json
sentinel/: config.py  core.py  cross_repo.py  github.py  preprocess.py  runner.py
sentinel/evals/: __init__.py  report.py  runner.py  scorer.py
sentinel/skills/: api_breaking_change.py  base.py  change_completeness.py  custom.py  dependency_check.py  migration_safety.py  workflow_security.py
sentinel/telemetry/: __init__.py  events.py  load.py  render.py  sink.py
tests/: test_config.py  test_cross_repo.py  test_custom_skill.py  test_entrypoint.py  test_evals_scorer.py  test_github_comment.py  test_integration.py  test_migration_safety.py  test_runner.py  test_telemetry_events.py  test_telemetry_load.py  test_telemetry_render.py  test_telemetry_sink.py  test_verify.py  test_workflow_security.py
(+11 files in other folders)
