[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-ai"
version = "0.3.0"
description = "AI agents for your software delivery pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
]

[project.scripts]
sentinel = "entrypoint:main"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
